Searching for user private tenants.